Der Nutzer kann im Hauptmenü ein neues Spiel starten

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Whack-A-Toffel</string>
-    <string name="hello_world">Hello world!</string>
+	<string name="app_name">Whack-A-Tato</string>
+	<string name="startGame">Start Game</string>
+	<string name="exit">Exit</string>
+
+	<!--Temp Placeholders -->
+	<string name="title_activity_game">GameActivity</string>
+	<string name="dummy_content">Da Game</string>
 
 </resources>
