--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<string name="app_name">Whack-A-Toffel</string>
+	<string name="app_name">Tap-A-Toffel</string>
 	<string name="startGame">Spiel starten</string>
+	<string name="loading_highscores">Lade Highscores ...</string>
+	<string name="load_highscores_error">Fehler beim Laden der Highscores</string>
+	<string name="player">Spieler</string>
+	<string name="score">Punkte</string>
+	<string name="date">Datum</string>
+	<string name="no_connection">Keine Verbindung verfügbar</string>
 
 </resources>
