--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<string name="app_name">Whack-A-Tato</string>
+	<string name="app_name">Tap-A-Tato</string>
 	<string name="startGame">Start Game</string>
 
 	<!--Temp Placeholders -->
 	<string name="title_activity_game">GameActivity</string>
 	<string name="dummy_content">Da Game</string>
+
+	<string name="title_activity_highscores">Highscores</string>
+	<string name="loading_highscores">Loading Highscores ...</string>
+	<string name="highscores">Highscores</string>
+	<string name="load_highscores_error">Failed to retrieve highscores</string>
+	<string name="player">Player</string>
+	<string name="score">Score</string>
+	<string name="date">Date</string>
+	<string name="no_connection">No connection available</string>
 
 </resources>
