--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -4,6 +4,7 @@
 	<string name="app_name">Tap-A-Toffel</string>
 	<string name="startGame">Spiel starten</string>
 	<string name="loading_highscores">Lade Highscores ...</string>
+	<string name="highscores">Highscores</string>
 	<string name="load_highscores_error">Fehler beim Laden der Highscores</string>
 	<string name="player">Spieler</string>
 	<string name="score">Punkte</string>
