--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,12 +3,16 @@
 
 	<string name="app_name">Tap-A-Toffel</string>
 	<string name="startGame">Spiel starten</string>
-	<string name="loading_highscores">Lade Highscores ...</string>
+
+	<string name="title_activity_highscores">Highscores</string>
+	<string name="loading_highscores">Lade Highscores …</string>
 	<string name="highscores">Highscores</string>
 	<string name="load_highscores_error">Fehler beim Laden der Highscores</string>
 	<string name="player">Spieler</string>
 	<string name="score">Punkte</string>
 	<string name="date">Datum</string>
 	<string name="no_connection">Keine Verbindung verfügbar</string>
+	
+	<string name="time">Zeit: </string>
 
 </resources>
