Durch Tap auf eine Toffel erhöht sich der Score für die laufende Runde

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,6 +13,6 @@
 	<string name="date">Datum</string>
 	<string name="no_connection">Keine Verbindung verfügbar</string>
 	
-	<string name="time">Zeit: </string>
+	<string name="time">Zeit</string>
 
 </resources>
