--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,10 @@
 	<string name="no_connection">No connection available</string>
 	
 	<string name="time">Time</string>
+	
+	<string name="highscore_nickname">Nickname</string>
+	<string name="submit">Submit</string>
+	<string name="skip">Skip</string>
+	<string name="submit_highscore">Submit Highscore</string>
 
 </resources>
