--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 	<string name="player">Player</string>
 	<string name="score">Score</string>
 	<string name="date">Date</string>
+	<string name="position">Position</string>
 	<string name="no_connection">No connection available</string>
 	
 	<string name="time">Time</string>
